--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>NB-IoT draft 2</title>
+	<title>Honors Website</title>
 
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
