--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 			<div class="smallsep heading" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);"></div>
 			<h1 class="heading" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">Rhode IT</h1>
 			<h2 class="heading" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">An IoT based and Blockchain based Smart
-				locking for Bicycles</h2>
+				locking Platform for Bicycles</h2>
 			<a class="smoothscroll" href="#about">
 				<div class="mouse">
 					<div class="wheel"></div>
@@ -4330,7 +4330,10 @@
 
 	<section id="timeline">
 		<div class="container">
-			<h1 class="project-name">Project Timeline</h1>
+				<div class="row">
+					
+			<h1 >Project Timeline</h1>
+			<div class="block"></div>
 			<div id="timeline">
 				<div class="timeline-item">
 					<div class="timeline-icon">
@@ -4401,6 +4404,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 		</div>
 	</section>
 
