--- a/index.html
+++ b/index.html
@@ -4473,11 +4473,11 @@
 						<div class="timeline-content right">
 							<h2>Submit final Research Proposal</h2>
 							<h2>Date Started 10 March 2019</h2>
-							<h2>Date Ended 10 March 2019</h2>
+							<h2>Date Ended 13 March 2019</h2>
 							<p>
 								Write a test smart contract that sends and recieves data and connect it to the Ganache instance <br>
 							</p>
-							<button href="" class="btn" disabled>Peding</button>
+							<button href="" class="btn" disabled>Done</button>
 						</div>
 					</div>
 
